<resources>
    <string name="app_name">Petvet</string>
    <string name="name_pet">Zoe</string>
    <string name="raza">Chihuahueño</string>
    <string name="genero">Macho</string>
    <string name="nacimiento">31/07</string>
    <string name="edad">5 años</string>
    <string name="biografia">Hola, me gusta mucho salir a pasear, atrapar la pelota, jugar correteadas y me fascina comer galletitas en forma de huesos.</string>
    <string name="recordar">Recordar</string>
    <string name="btn_edit">Editar</string>
    <string name="tv_cita">CITA</string>
    <string name="tv_vacuna">VACUNAR</string>
    <string name="tv_desparasitar">DESPARASITAR</string>
    <string name="tv_alimentar">ALIMENTAR</string>
    <string name="title_activity_localizacion">Map</string>
    <string name="tv_politicas">Al usar Petvet aceptas las Políticas de privacidad</string>
    <string name="tv_restablecer">¿Has olvidado tu contraseña?</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_register">Regístrate</string>


</resources>
